--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,14 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Balcony Calculator Firebase project",
   "version": "1.0.0",
-  "private": true,
-  "main": "index.js",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.8"
+  },
   "engines": {
     "node": "20"
   },
@@ -14,29 +19,5 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "check": "prettier --check ."
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "firebase-admin": "^13.3.0",
-    "firebase-functions": "^6.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.7.8",
-    "eslint": "^9.14.0",
-    "eslint-config-prettier": "^10.1.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.0",
-    "prettier": "^3.5.3"
-  },
-  "keywords": [
-    "firebase",
-    "cloud-functions",
-    "balcony-calculator"
-  ],
-  "author": "Your Name <your.email@example.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-username/balcony-calculator.git"
   }
 }
