--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,79 +2,41 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install root dependencies
+          node-version: '20'
+      - name: Install dependencies
         run: npm ci
-
-      - name: Lint code
-        run: npm run lint
-
-      - name: Check formatting
-        run: npm run check
-
-      - name: Build client
+      - name: Run linting
+        run: npx eslint .
+      - name: Build project
         run: npm run build
-
-      - name: Install functions dependencies
-        working-directory: functions
-        run: npm ci
-
-      - name: Lint functions
-        working-directory: functions
-        run: npm run lint
-
-      - name: Check formatting functions
-        working-directory: functions
-        run: npm run check
 
   deploy:
     runs-on: ubuntu-latest
     needs: check
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install root dependencies
+          node-version: '20'
+      - name: Install dependencies
         run: npm ci
-
-      - name: Build client
+      - name: Build project
         run: npm run build
-
-      - name: Install functions dependencies
-        working-directory: functions
-        run: npm ci
-
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-          projectId: balconycalculator-15c42
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           channelId: live
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          projectId: balconycalculator-15c42
