--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,19 +6,21 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linting
-        run: npx eslint .
-      - name: Build project
-        run: npm run build
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+    - name: Install dependencies
+      run: npm ci
+    - name: Debug directory structure
+      run: ls -R
+    - name: Run linting
+      run: npx eslint .
+    - name: Build project
+      run: npm run build
 
   deploy:
     runs-on: ubuntu-latest
